2006-01-08 Axel Simon <A.Simon@kent.ac.uk>

	* soegtk/Graphics/SOE/Gtk.hs.pp: Fixed a qualified name which made
	ghc 6.2.2 fall over (when it shouldn't).
	
2006-01-07 Duncan Coutts <duncan@coutts.uklinux.net>

	* configure.ac: bump version to 0.9.10.2 to help track recent
	changes.

2006-01-06 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo/Matrix.chs: fix bugs reported by
	"MenTaLguY" using a slight variation on the patch he supplied. Also
	implement scalarMultiply using the 'pointwise' function.

2005-12-12 Duncan Coutts <duncan@coutts.uklinux.net>

	* cairo/Graphics/Rendering/Cairo.hs: fix some doc references.

2005-12-9 Duncan Coutts <duncan@coutts.uklinux.net>

	* demo/fastdraw/FastDraw.hs: intersect the exposed region with the
	region covered by the pixbuf before drawing the rectangles.

2005-12-9 Axel Simon <A.Simon@kent.ac.uk>

	* demo/fastdraw/FastDraw.hs: Fixed two parameters.

	* glib/System/Glib/UTFString.hs.pp: Renamed from
	glib/System/Glib/UTFString.hs since it needs to be run through CPP
	to appease haddock.

2005-12-8 Duncan Coutts <duncan@coutts.uklinux.net>

	* glib/System/Glib/FFI.hs.pp: We should almost certainly not be using
	the standard free function anywhere in the glib or gtk bindings, so we
	do not re-export it from this module. It is not gueranteed by the
	Haskell FFI spec that free calls the C free() function. It is also not
	guaranteed that g_free() simply calls the stanard C free() function.

	* glib/System/Glib/UTFString.hs: call g_free() rather than Haskell
	free for freeing glib strings (which of course were allocated with
	g_new()).

	* gtk/Graphics/UI/Gtk/Gdk/Pixbuf.chs.pp: use withUTFStringArray and
	withUTFStringArray0 rather than ad-hoc implementations.

	* gtk/Graphics/UI/Gtk/General/StockItems.hsc: use readUTFString rather
	than peekUTFString + g_free().

	* glib/System/Glib/GList.chs: add withGSList function.

	* sourceview/Graphics/UI/Gtk/SourceView/SourceTag.chs: use withGSList