@@ -1,0 +1,12 @@
+name: svgcairo
+version: @PACKAGE_VERSION@
+license: BSD3
+license-file: cairo/COPYRIGHT
+copyright: (c) Duncan Coutts 2005, (c) Paolo Martini 2005
+author: Duncan Coutts, Paolo Martini
+maintainer: gtk2hs-devel@lists.sourceforge.net
+stability: provisional
+homepage: http://haskell.org/gtk2hs/
+category: Graphics
+build-depends: haskell98 mtl glib==@PACKAGE_VERSION@ cairo==@PACKAGE_VERSION@
+exposed-modules: ${modules}
